# opencv_test

./: .gitignore  CMakeLists.txt
app/: crop_images.cc  move_line.cc  test_cb_class.cc  test_detect_app.cc  test_rect.cc
cmake/: util.cmake
data/: cfg.yaml  example.txt
include/: detect_app.h  detector_node.h  for_test.h
src/: detect_app.cpp  detector_node.cpp  for_test.cpp  trans.py
